--- a/lambdas/oauth-token/package.json
+++ b/lambdas/oauth-token/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "post-confirmation",
+  "name": "oauth-token",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -17,7 +17,8 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.616.0",
-    "@aws-sdk/lib-dynamodb": "^3.616.0"
+    "@aws-sdk/client-secrets-manager": "^3.616.0",
+    "aws-lambda": "^1.0.7",
+    "axios": "^1.7.2"
   }
 }
