--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "deploy:dev": "./build-lambdas.sh && cdk deploy -c env=dev",
-    "deploy:prod": "./build-lambdas.sh && cdk deploy -c env=prod"
+    "deploy:dev": "node build-lambdas.js && cdk deploy -c env=dev",
+    "deploy:prod": "node build-lambdas.js && cdk deploy -c env=prod"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
