--- a/lambdas/trakt-api/search/package.json
+++ b/lambdas/trakt-api/search/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.141",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20.14.11",
     "@types/uuid": "^10.0.0",
     "esbuild": "^0.23.0",
@@ -22,6 +23,7 @@
     "@aws-sdk/client-secrets-manager": "^3.620.0",
     "@aws-sdk/lib-dynamodb": "^3.616.0",
     "axios": "^1.7.2",
+    "lodash": "^4.17.21",
     "uuid": "^10.0.0"
   }
 }
