--- a/lambdas/auth/post-confirmation/package.json
+++ b/lambdas/auth/post-confirmation/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.620.0",
     "@aws-sdk/client-dynamodb": "^3.616.0",
     "@aws-sdk/lib-dynamodb": "^3.616.0"
   }
