--- a/lambdas/trakt/search-movie/package.json
+++ b/lambdas/trakt/search-movie/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trakt-api-search",
+  "name": "trakt-search-movie",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
