--- a/lambdas/trakt/search-movie/package.json
+++ b/lambdas/trakt/search-movie/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prebuild": "rm -rf dist",
-    "build": "esbuild src/handler.ts --bundle --platform=node --target=es2020 --outfile=dist/handler.js"
+    "build": "esbuild src/handler.ts --bundle --platform=node --target=es2020 --outfile=dist/handler.js --external:/opt/nodejs/*"
   },
   "keywords": [],
   "author": "",
