refactor: get trakt and tmdb api keys

--- a/lambda-shared/package.json
+++ b/lambda-shared/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.629.0",
     "aws-lambda": "^1.0.7",
     "axios": "^1.7.4"
   }
