--- a/lambda-shared/package.json
+++ b/lambda-shared/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.629.0",
+    "@aws-sdk/lib-dynamodb": "^3.629.0",
     "aws-lambda": "^1.0.7",
     "axios": "^1.7.4"
   }
