--- a/lambda-shared/package.json
+++ b/lambda-shared/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.141",
     "@types/node": "^20.14.11",
+    "@types/uuid": "^10.0.0",
     "esbuild": "^0.23.0",
     "typescript": "^5.5.4"
   },
@@ -20,6 +21,7 @@
     "@aws-sdk/client-secrets-manager": "^3.629.0",
     "@aws-sdk/lib-dynamodb": "^3.629.0",
     "aws-lambda": "^1.0.7",
-    "axios": "^1.7.4"
+    "axios": "^1.7.4",
+    "uuid": "^10.0.0"
   }
 }
