--- a/lambdas/favorite/create/package.json
+++ b/lambdas/favorite/create/package.json
@@ -13,13 +13,11 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.141",
     "@types/node": "^20.14.11",
-    "@types/uuid": "^10.0.0",
     "esbuild": "^0.23.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.629.0",
-    "@aws-sdk/lib-dynamodb": "^3.616.0",
-    "uuid": "^10.0.0"
+    "@aws-sdk/lib-dynamodb": "^3.616.0"
   }
 }
