feat: check user when search/get trend anime, shows

--- a/lambdas/jikan/get-trend-anime/package.json
+++ b/lambdas/jikan/get-trend-anime/package.json
@@ -17,6 +17,8 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.631.0",
+    "@aws-sdk/lib-dynamodb": "^3.631.0",
     "axios": "^1.7.2"
   }
 }
